fixed filter on mobile devices

--- a/static/styles.css
+++ b/static/styles.css
@@ -18,7 +18,7 @@
     padding: 2px;
 }
 
-#filter-selected{
+#category-selected, #price-selected{
     display: none;
     margin-left: 5px;
     font-weight: bold;
@@ -27,6 +27,10 @@
     font-size: 9px;
     border-radius: 10px;
     padding: 4px;
+}
+
+#price-selected{
+    background-color:cadetblue;
 }
 
 #filter-badge{
